--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -1257,6 +1257,8 @@ else
                                     Участники
                                 </a>
                             </li>
+                            @if (Model.Idea.CurrentRole.Role == ApplicationCore.DTOs.Idea.CurrentUserRoleTypes.Author) 
+                            {
                             <li class="p-0 col text-center idea_menu_link nav-item">
                                 <a asp-action="@Model.Idea.Guid" asp-controller="idea" asp-route-section="editGeneral" class="p-3 ps-1 pe-1 ps-lg-2 ps-xl-3 pe-xl-3 nav-link hover-white">
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -1271,6 +1273,7 @@ else
                                     Настройки
                                 </a>
                             </li>
+                            }
                         </ul>
                         <section>
                             <div class="col-12 ps-2 pb-3">
