--- a/Web/Views/Idea/EditMembers.cshtml
+++ b/Web/Views/Idea/EditMembers.cshtml
@@ -684,8 +684,8 @@
                             <div class="col-12 d-flex align-items-end">
                                 <div class="ms-auto pb-2 d-flex">
                                     <div class="position-relative me-5">
-                                        <button class="asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
-                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                        <button data-idea="@Model.Idea.Guid" class="asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
+                                            <svg data-idea="@Model.Idea.Guid" xmlns="http://www.w3.org/2000/svg"
                                                  width="33"
                                                  height="33"
                                                  fill="currentColor"
@@ -767,7 +767,7 @@ else
                                         <img src="~/media/userAvatars/@modder.UserAvatar"
                                              height="33"
                                              width="33"
-                                             class="rounded-circle" />
+                                             class="rounded-circle b-all" />
                                     </a>
                                 }
                             </div>
@@ -928,7 +928,7 @@ else
                                 </a>
                             </li>
                             <li class="p-0 col text-center idea_menu_link active nav-item">
-                                <span asp-route-section="editGeneral" class="p-3 ps-1 pe-1 ps-lg-2 ps-xl-3 pe-xl-3 nav-link hover-white">
+                                <span asp-route-section="editGeneral" class="p-3 ps-1 pe-1 ps-lg-2 ps-xl-3 pe-xl-3 nav-link clr-white hover-white">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          width="16"
                                          height="16"
@@ -976,43 +976,43 @@ else
                                             С помощью кнопок справа меняйте роли участников в идее
                                         </span>
                                         <!---->
-                                        <div style="min-height: 520px;"
+                                        <div style="min-height: 320px;"
                                              class="mt-2 custom-scroll">
                                             @if (Model.MemberList != null)
                                             {
                                                 foreach (var member in Model.MemberList.Members)
                                                 {
-                                            <div data-user="@member.Guid" data-idea="@Model.Idea.Guid" class="mb-2 repostToUser pe-1 pe-md-2 pe-lg-4">
-                                                <a>
-                                                    <img class="me-1" src="~/media/userAvatars/@member.Avatar" />
-                                                    @member.Name
-                                                </a>
-                                                <button class="asyncSetModderRoleBtn btn clr-white pe-1">
-                                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                                         width="24"
-                                                         height="24"
-                                                         fill="currentColor"
-                                                         class="clr-mute hover-white bi bi-mortarboard"
-                                                         viewBox="0 0 16 16">
-                                                        <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917l-7.5-3.5ZM8 8.46 1.758 5.965 8 3.052l6.242 2.913L8 8.46Z" />
-                                                        <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466 4.176 9.032Zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46l-3.892-1.556Z" />
-                                                    </svg>
-                                                    Модератор
-                                                </button>
-                                                <button class="asyncRemoveRoleBtn clr-white btn ps-0">
-                                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                                         width="24"
-                                                         height="24"
-                                                         fill="currentColor"
-                                                         class="clr-mute hover-white bi bi-person-x"
-                                                         viewBox="0 0 16 16">
-                                                        <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                                                        <path fill-rule="evenodd"
-                                                              d="M12.146 5.146a.5.5 0 0 1 .708 0L14 6.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 7l1.147 1.146a.5.5 0 0 1-.708.708L14 7.707l-1.146 1.147a.5.5 0 0 1-.708-.708L13.293 7l-1.147-1.146a.5.5 0 0 1 0-.708z" />
-                                                    </svg>
-                                                    Выгнать
-                                                </button>
-                                            </div>
+                                                    <div data-user="@member.Guid" data-idea="@Model.Idea.Guid" class="mb-2 repostToUser pe-1 pe-md-2 pe-lg-4">
+                                                        <a>
+                                                            <img class="me-1" src="~/media/userAvatars/@member.Avatar" />
+                                                            @member.Name
+                                                        </a>
+                                                        <button class="asyncSetModderRoleBtn btn clr-white pe-1">
+                                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                                 width="24"
+                                                                 height="24"
+                                                                 fill="currentColor"
+                                                                 class="clr-mute hover-white bi bi-mortarboard"
+                                                                 viewBox="0 0 16 16">
+                                                                <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917l-7.5-3.5ZM8 8.46 1.758 5.965 8 3.052l6.242 2.913L8 8.46Z" />
+                                                                <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466 4.176 9.032Zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46l-3.892-1.556Z" />
+                                                            </svg>
+                                                            Модератор
+                                                        </button>
+                                                        <button class="asyncRemoveRoleBtn clr-white btn ps-0">
+                                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                                 width="24"
+                                                                 height="24"
+                                                                 fill="currentColor"
+                                                                 class="clr-mute hover-white bi bi-person-x"
+                                                                 viewBox="0 0 16 16">
+                                                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                                                <path fill-rule="evenodd"
+                                                                      d="M12.146 5.146a.5.5 0 0 1 .708 0L14 6.293l1.146-1.147a.5.5 0 0 1 .708.708L14.707 7l1.147 1.146a.5.5 0 0 1-.708.708L14 7.707l-1.146 1.147a.5.5 0 0 1-.708-.708L13.293 7l-1.147-1.146a.5.5 0 0 1 0-.708z" />
+                                                            </svg>
+                                                            Выгнать
+                                                        </button>
+                                                    </div>
                                                 }
                                                 <div class="p-2 b-top d-flex">
                                                     @foreach (var pageInfo in Model.MemberList.Pages)
@@ -1069,7 +1069,7 @@ else
                                         <p class="mb-0 t-sm t-smbold text-muted">@Model.Idea.CurrentRole.RoleName</p>
                                     </div>
                                 </div>
-                                @if (Model.Idea.CurrentRole.Role <= ApplicationCore.DTOs.Idea.CurrentUserRoleTypes.Modder)
+                                @if (Model.Idea.CurrentRole.Role <= ApplicationCore.DTOs.Idea.CurrentUserRoleTypes.Member)
                                 {
                                     <div class="btn-back-hover aside_section_adaptive">
                                         <button class="p-3 showNewTopicWindowBtn col-12 btn-unfocus hover-white btn clr-mute t-bold t-sm bg-transparent">
