--- a/Web/wwwroot/css/idea-upd.css
+++ b/Web/wwwroot/css/idea-upd.css
@@ -78,6 +78,11 @@
     border-radius: 9px !important;
     border: none !important;
 }
+.form-sky-focus:focus {
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+}
 
 @media (min-width: 230px) {
     .topic_hide_elems {
