--- a/Web/Views/User/EditAccount.cshtml
+++ b/Web/Views/User/EditAccount.cshtml
@@ -557,20 +557,15 @@
                             <div class="p-1 col-12 d-flex justify-content-center">
                                 <div class="col-3 b-right">
                                     <div class="btn-back-hover aside_section_adaptive p-2 ps-0 pe-0 ps-md-1 pe-md-1 ps-lg-2 pe-lg-2">
-                                        <a asp-action="im" asp-route-section="editgeneral" asp-controller="user" class="text-truncate settings_link_text text-start col-12 btn clr-white t-smbold t-md bg-transparent">
+                                        <a asp-action="im" asp-route-section="editgeneral" asp-controller="user" class="text-truncate settings_link_text text-start col-12 btn clr-mute t-smbold t-md bg-transparent">
                                             Основные
                                         </a>
                                     </div>
                                     <div class="btn-back-hover aside_section_adaptive p-2 ps-0 pe-0 ps-md-1 pe-md-1 ps-lg-2 pe-lg-2">
-                                        <a asp-action="im" asp-route-section="editaccount" asp-controller="user" class="text-truncate settings_link_text text-start col-12 btn clr-mute t-smbold t-md bg-transparent">
+                                        <a asp-action="im" asp-route-section="editaccount" asp-controller="user" class="text-truncate settings_link_text text-start col-12 btn clr-white t-smbold t-md bg-transparent">
                                             Аккаунт
                                         </a>
-                                    </div>
-                                    <div class="btn-back-hover aside_section_adaptive p-2 ps-0 pe-0 ps-md-1 pe-md-1 ps-lg-2 pe-lg-2">
-                                        <a asp-action="im" asp-route-section="editremove" asp-controller="user" class="text-truncate settings_link_text text-start col-12 btn clr-mute t-smbold t-md bg-transparent">
-                                            Удалить
-                                        </a>
-                                    </div>
+                                    </div>                                    
                                 </div>
                                 <div class="col d-flex justify-content-center">
                                     <div class="col-9 col-md-10 p-3">
