add participation async window

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap"
           rel="stylesheet" />
 
-    <title>@ViewData["Title"] - Roundile</title>
+    <title>@ViewData["Title"] • Roundile</title>
 </head>
 <body class="bg-darkc text-white">
 
