--- a/Web/wwwroot/css/style.css
+++ b/Web/wwwroot/css/style.css
@@ -14,6 +14,18 @@ a {
     font-weight: 600 !important;
 }
 
+
+#participationWindow {
+    background-color: black;
+    width: 360px;
+    min-height: 500px;
+}
+#participationWindowLoad {
+    overflow-x: hidden;
+    height: 268px;
+    overflow-y: scroll;
+}
+
 .container {
     max-width: 1129px !important;
 }
