--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -248,17 +248,17 @@
                             <div class="mt-2 col-12 d-flex justify-content-center">
                                 <form id="asyncNewIdeaForm" class="col-10">
                                     <div class="col-12 mb-2">
-                                        <input type="text"
-                                               class="form-control"
+                                        <input autocomplete="off" minlength="4" maxlength="36" type="text"
+                                               class="form-upd form-control"
                                                id="floatingInput" />
                                         <label class="pt-1 t-sm clr-mute" for="floatingInput">
                                             Придумайте название
                                         </label>
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <textarea style="height: 82px; resize: none !important;"
+                                        <textarea autocomplete="off" minlength="4" maxlength="220" style="height: 82px; resize: none !important;"
                                                   type="text"
-                                                  class="form-control"
+                                                  class="form-upd form-control"
                                                   id="floatingInput"></textarea>
                                         <label class="pt-1 t-sm clr-mute" for="floatingInput">
                                             Дайте краткое описание своей идее
@@ -305,9 +305,11 @@
                                         </span>
                                         <div class="mt-2" id="selectedNewIdeaTags"></div>
                                     </div>
-                                    <button type="submit" class="mt-4 icon-link-btn">
+                                    <button type="submit" class="mt-3 icon-link-btn">
                                         Создать идею
                                     </button>
+                                    <label id="newIdeaWindowError" class="pt-2 text-center text-danger t-sm">                                       
+                                    </label>
                                 </form>
                             </div>
                         </div>
