--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <!---->
-                    <!--New Idea-->
+                    <!--New Idea + -->
                     <div id="newIdeaWindow" class="d-none window_rounded_shadow">
                         <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                             <span class="clr-white t-md">
@@ -248,7 +248,7 @@
                             <div class="mt-2 col-12 d-flex justify-content-center">
                                 <form id="asyncNewIdeaForm" class="col-10">
                                     <div class="col-12 mb-2">
-                                        <input autocomplete="off" minlength="4" maxlength="36" type="text"
+                                        <input autocomplete="off" minlength="4" maxlength="56" type="text"
                                                class="form-upd form-control"
                                                id="floatingInput" />
                                         <label class="pt-1 t-sm clr-mute" for="floatingInput">
